--- a/Frontend/WorldInPocket/src/app/components/pagamento/pay-success/pay-success.component.html
+++ b/Frontend/WorldInPocket/src/app/components/pagamento/pay-success/pay-success.component.html
@@ -13,4 +13,13 @@
     <li><strong>Nome:</strong> {{ nomeAcquirente }}</li>
     <li><strong>Email:</strong> {{ emailAcquirente }}</li>
   </ul>
+  <p-progressSpinner
+    *ngIf="showSpinner"
+    styleClass="w-4rem h-4rem"
+    strokeWidth="8"
+    fill="var(--surface-ground)"
+    animationDuration=".5s"
+  ></p-progressSpinner>
 </div>
+
+
