--- a/Frontend/WorldInPocket/src/app/components/register-modal/register-modal.component.html
+++ b/Frontend/WorldInPocket/src/app/components/register-modal/register-modal.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 max-w-30rem border-round-md p-4 shadow-8">
-  <h3 class="text-center text-4xl my-3">Iscriviti!</h3>
+<div class="bg-gray-100 max-w-30rem border-round-md p-4 shadow-8 registration-container" >
+  <h3 class="text-center text-4xl my-3"></h3>
   <form [formGroup]="fG" (ngSubmit)="submit()">
     <div class="grid">
       <div class="col-12 my-2 input-container">
