--- a/Frontend/WorldInPocket/src/app/components/hotel-details/hotel-details.component.html
+++ b/Frontend/WorldInPocket/src/app/components/hotel-details/hotel-details.component.html
@@ -19,7 +19,9 @@
     <div class="hotel-details-container" *ngIf="selectedHotel">
       <div class="hotel-description">
         <h3>Descrizione</h3>
-        <p>{{ selectedHotel.description }}</p>
+       L'Hotel Serenity è un esempio di eleganza senza tempo. I nostri interni sono stati progettati con cura per creare un'atmosfera raffinata e accogliente. Ogni camera e suite è arredata con gusto, con un tocco di design moderno e dettagli tradizionali che conferiscono un senso di calore e comfort.Le nostre camere e suite sono dotate di ogni comfort immaginabile.
+       Dai letti extra large e comodi agli arredi di alta qualità, tutto è stato pensato per garantire il massimo relax ai nostri ospiti. Molte delle camere offrono anche spettacolari viste panoramiche sulla città o sulle montagne circostanti.
+      <p>{{ selectedHotel.description }} </p>
       </div>
       <div class="hotel-services">
         <h3>Servizi dell'Hotel</h3>
@@ -39,7 +41,7 @@
           <!-- Mostra alcune recensioni degli ospiti qui -->
         </div>
       </div>
-      <div class="hotel-map">
+      <!-- <div class="hotel-map">
         <h3>Posizione dell'Hotel</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d0.000000!3d0.000000!4m22!2m11!1e1!2m6!1s...!2s...!4e3!5m5!3m4!1s0x0:0x0!8m2!3d0.000000!4d0.000000!16s%2Fg%2F123abc_xyz!3s...!4v1234567890!5e0!3m2!1sen!2sus!4v1234567890"
@@ -49,7 +51,7 @@
           allowfullscreen=""
           loading="lazy"
         ></iframe>
-      </div>
+      </div> -->
 
     </div>
   </div>
