--- a/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.scss
+++ b/Frontend/WorldInPocket/src/app/components/prenotazione-hotel/prenotazione-hotel.component.scss
@@ -1,9 +1,9 @@
 /* Colors */
-$border: 		 #c6c6c6;
+$border: 		 #74299133;
 $border-focus: #9FB1C1;
-$brand-color:  #1b3d4d;
+$brand-color:  #272829;
 $booking-green: #bdcc00;
-$asphalt: 		#506982;
+$asphalt: 		#732991;
 
 
 body{
