--- a/Frontend/WorldInPocket/src/app/components/home-footer/home-footer.component.html
+++ b/Frontend/WorldInPocket/src/app/components/home-footer/home-footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <p>
-    Copyright © 2023  - <a href="https://github.com/Manuel-Altruda">@Manuel Altruda</a>
+    Copyright © 2023  - <a href="https://www.linkedin.com/in/manuel-altruda-/">@Manuel Altruda</a>
   </p>
   <p>
     Scarica WorldInPocket per avere a disposizione viaggi ed escursioni
